--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -812,6 +812,9 @@ app-service-page-checkout{
     width: 100%;
     padding: 0 15px;
   }
+  .main-block{
+    overflow: hidden;
+  }
 
   .section-title{
     font-size: 18px;
