--- a/src/app/shared/modules/main-header/main-header.component.scss
+++ b/src/app/shared/modules/main-header/main-header.component.scss
@@ -189,7 +189,7 @@ nav {
       span::after {
         display: block;
         position: absolute;
-        width: 100%;
+        width: 22px;
         height: 2px;
         background-color: #3C7EEA;
         transition-duration: .25s;
