--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,1 +1,22 @@
-<p>error-page works!</p>
+<app-main-header></app-main-header>
+<div class="main" >
+  <div class="wrapper">
+    <div class="content">
+      <div class="clouds">
+        <img src="assets/images/svg/clouds.svg" alt="">
+      </div>
+      <div class="img">
+        <img src="assets/images/svg/404.svg" alt="">
+      </div>
+
+
+    </div>
+    <div class="transparent-bg">
+      <img src="assets/images/svg/404-bg.svg" alt="">
+      <h2 class="error-title">
+        СТРАНИЦА НЕ НАЙДЕНА
+      </h2>
+      <img class="bubles" src="assets/images/svg/bubles-bg.svg" alt="">
+    </div>
+  </div>
+</div>
