--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.html
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.html
@@ -142,12 +142,12 @@
             </section>
         </div>
 
-        <div class="notify">
+        <!-- <div class="notify">
             <button class="close"></button>
             <img src="/assets/images/icons/notify-dashboard.png" alt="">
             <h5>{{'general.congratulate' | translate}}, {{ user.name }}!</h5>
             <p>{{'dashboard.home-page.new-skill-firstPart' | translate}} “Уверенный” {{'dashboard.home-page.new-skill-lastPart ' | translate}}</p>
             <button class="more">{{'dashboard.home-page.show-details' | translate}}</button>
-        </div>
+        </div> -->
     </section>
 </div>
