--- a/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.html
+++ b/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.html
@@ -37,7 +37,7 @@
                     {{'chat.work_chat.system-messages.arbitr.winer-is' | translate}}
                 </p>
             </div>
-            <div class="avatar"> <img [src]="systemMessage.message.winnerAvatar" alt="ava"> </div>
+            <div class="avatar"> <img [src]="systemMessage.message.vinnerAvatar" alt="ava"> </div>
             <div>
                 <p>{{ systemMessage.message.winnerName }} {{ systemMessage.message.winnerSurname }}</p>
                 <p>
