--- a/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.scss
+++ b/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.scss
@@ -155,15 +155,20 @@
               height: 40px;
               margin: 0 20px 0 35px;
               position: relative;
-
+              border-radius: 50%;
+              overflow: hidden;
               img {
-                position: absolute;
-                width: 40px;
-                height: auto;
-                max-height: 40px;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+                // position: absolute;
+                // width: 40px;
+                // height: auto;
+                // max-height: 40px;
+                // top: 50%;
+                // left: 50%;
+                // transform: translate(-50%, -50%);
+                height: 100%;
+                width: 100%;
+                -o-object-fit: cover;
+                object-fit: cover;
               }
 
               &+div {
