--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper" *ngIf="user">
     <header>
-        <a [routerLink]="'/' | localize" class="logo">whocan</a>
+        <a [routerLink]="'/' | localize" class="logo">profiroom</a>
         <div class="controls">
             <app-system-messages [user]="user"></app-system-messages>
             <section class="type-section">
