--- a/src/app/shared/modules/footer/footer.component.html
+++ b/src/app/shared/modules/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="wrapper">
         <div class="columns-list">
             <div class="column column-info">
-                <h4>gigrum</h4>
+                <h4>Profiroom</h4>
                 <p>{{'footer.text' | translate}}</p>
             </div>
             <ul class="column categories">
