--- a/src/app/shared/modules/main-header/main-header.component.html
+++ b/src/app/shared/modules/main-header/main-header.component.html
@@ -32,8 +32,8 @@
 
         </div>
         <div class="logo">
-            <!-- <a [routerLink]="'' | localize"> <img src="assets/images/logo.svg" alt=""></a> -->
-            <a [routerLink]="'' | localize"> Whocan</a>
+            <a [routerLink]="'' | localize"><div class="img-wrapper"><img src="assets/images/logo.svg" alt=""></div></a>
+            <!-- <a [routerLink]="'' | localize"> profiroom</a> -->
         </div>
         <div class="menu">
 
