--- a/src/app/home-page/home-page-app-news/home-page-app-news.component.scss
+++ b/src/app/home-page/home-page-app-news/home-page-app-news.component.scss
@@ -133,8 +133,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-60%, -50%);
-    width: 960px;
-    height: 1070px;
+    // width: 960px;
+    // height: 1070px;
     background-image: url(/assets/images/home-page/app-news-decoration2.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -205,9 +205,12 @@
         bottom: 8px;
         width: 25px;
         height: 25px;
+
       }
     }
-
+    &::before{
+      display: none;
+    }
     .side-wrap {
       height: 100%;
       width: 100%;
@@ -227,7 +230,7 @@
 @media (max-width: 1199.98px) {
   .section-info {
     width: 60%;
-
+    padding: 40px 0 50px;
     &__subtitle {
       font-size: 12px;
       line-height: 15px;
@@ -289,7 +292,7 @@
 
 @media (max-width: 767.98px) {
   .section-info {
-    width: 60%;
+    padding: 20px 0 30px;
 
     &__subtitle {
       font-size: 10px;
