--- a/src/app/shared/modules/footer/footer.component.scss
+++ b/src/app/shared/modules/footer/footer.component.scss
@@ -135,6 +135,23 @@
         top: 20%;
       }
     }
+    .logo {
+      width: 220px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      margin-right: 20px;
+      box-sizing: border-box;
+      padding-bottom: 3px;
+      .img-wrapper{
+        height: 38px;
+        margin-right: 13px;
+      }
+      img {
+        width: 64%;
+        height: 100%;
+      }
+    }
   }
 
   @media (max-width: 1499px) {
