--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -433,6 +433,9 @@ form::ng-deep {
   border: 1px dashed #dce0e6;
   position: relative;
   z-index: 2;
+  &.invalid {
+    border-color: red;
+  }
   .upload {
     position: relative;
     height: 41px;
