--- a/src/app/shared/modules/main-header/main-header.component.scss
+++ b/src/app/shared/modules/main-header/main-header.component.scss
@@ -113,7 +113,7 @@ nav {
 }
 @media (max-width: 1499px) {
   .logo{
-    width: max-content;
+    width: 180px;
   }
   .wrapper{
     max-width: 1110px;
@@ -152,7 +152,7 @@ nav {
     .img-wrapper{
       height: 28px;
       margin-right: 13px;
-      max-width: 180px;
+      max-width: 120px;
     }
   }
   .menu{
