--- a/src/app/shared/modules/footer/footer.component.html
+++ b/src/app/shared/modules/footer/footer.component.html
@@ -24,7 +24,7 @@
                 <li class="column-item"><a>{{'footer.list2-item5' | translate}} </a></li>
             </ul>
             <ul class="column">
-                <li class="column-title">Gigrum</li>
+                <li class="column-title">Profiroom</li>
                 <li class="column-item"><a>{{'header.how_it_works' | translate}} </a></li>
                 <li class="column-item"><a>{{'footer.list2-item1' | translate}} </a></li>
                 <li class="column-item"><a>{{'footer.blog' | translate}} </a></li>
