--- a/src/app/chat/components/chat-component/chat-component.html
+++ b/src/app/chat/components/chat-component/chat-component.html
@@ -3,7 +3,7 @@
 (swipeRight)="swipeEvent($event)">
     <section class="collocutors" [ngClass]="{ 'hidden': leftBarVisible === false, 'open': leftBarVisible === true }">
         <app-collocutor-list [chatType]="chatType"></app-collocutor-list>
-        <div class="toggleCollocutor" [ngClass]="{ 'hidden': rightBarVisible === false, 'open': rightBarVisible === true }" (click)="toggleCollocutorsTools()"></div>
+        <div class="toggleCollocutor" [ngClass]="{ 'hidden': leftBarVisible === false, 'open': leftBarVisible === true }" (click)="toggleCollocutorsTools()"></div>
     </section>
     <section class="messager" *ngIf="collocutorData"
       (swipeleft)="swipeEvent($event)"
@@ -23,7 +23,7 @@
         <app-messenger-tools *ngIf="chatType === 'work' && collocutorData" (noMoney)="openPayment($event)"></app-messenger-tools>
         <app-collocutor-information *ngIf="chatType === 'classic' && collocutorData">
         </app-collocutor-information>
-        <div class="toggleCollocutoInfo" [ngClass]="{ 'hidden': rightBarVisible === false, 'open': rightBarVisible === true }" (click)="toggleCollocutorsTools()"></div>
+        <div class="toggleCollocutoInfo" [ngClass]="{ 'hidden': rightBarVisible === false, 'open': rightBarVisible === true }" (click)="toggleCollocutorsInfo()"></div>
     </section>
     <!-- file loader -->
     <section class="file-loader" *ngIf="isFileLoaderVisible && collocutorData">
