--- a/src/app/chat/components/collocutors-list/collocutor-list.component.scss
+++ b/src/app/chat/components/collocutors-list/collocutor-list.component.scss
@@ -131,6 +131,7 @@
     .photo {
       margin-right: 20px;
       width: 40px;
+      min-width: 40px;
       height: 40px;
       border-radius: 50%;
       overflow: hidden;
