--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -49,12 +49,12 @@
                         <img src="assets/images/svg/service-page/envelope-hov.svg" alt="" class="hover-img">
                     </a>
                 </div>
-                <div class="action tooltip" data-title="Добавить к избранным" *ngIf="userTypeFreelancer">
+                <!-- <div class="action tooltip" data-title="Добавить к избранным" *ngIf="userTypeFreelancer">
                     <a href="">
                         <img src="assets/images/svg/service-page/heart.svg" alt="" class="default-img">
                         <img src="assets/images/svg/service-page/heart-hov.svg" alt="" class="hover-img">
                     </a>
-                </div>
+                </div> -->
                 <div *ngIf="currentUserId !== userData.id" class="action tooltip" data-title="Пожаловаться">
                     <a href="">
                         <img src="assets/images/svg/service-page/auction.svg" alt="" class="default-img">
