--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
@@ -156,6 +156,7 @@
     justify-content: space-between;
     padding: 0 20px;
     &__like {
+      display: none;
       width: 20px;
       height: 18px;
       background-image: url(/assets/images/icons/not_liked.png);
