--- a/src/app/chat/components/chat-component/chat-component.scss
+++ b/src/app/chat/components/chat-component/chat-component.scss
@@ -281,6 +281,11 @@
           flex-wrap: wrap;
         }
       }
+      app-messenger-tools{
+        height: 100%;
+        max-height: 100%;
+        overflow-y: scroll;
+      }
     }
     .messager{
       width: 100%;
