--- a/src/app/chat/components/message-list/message-list.component.scss
+++ b/src/app/chat/components/message-list/message-list.component.scss
@@ -357,6 +357,9 @@
         .message-list{
             & > div{
                 padding-right: 10px;
+                &:last-child{
+                    margin-bottom: 30px;
+                }
             }
         }
     }
