--- a/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
+++ b/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
@@ -168,6 +168,11 @@
         }
       }
     }
+    a{
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
     img {
       position: absolute;
       top: 50%;
