--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -315,6 +315,11 @@
     &:last-child{
       margin-right: 0;
     }
+    a{
+    width: 100%;
+    height: 100%;
+    display: block;
+    }
   }
 }
 
