--- a/src/app/user-page/user-page-services/user-page-services.component.scss
+++ b/src/app/user-page/user-page-services/user-page-services.component.scss
@@ -123,6 +123,7 @@
       justify-content: space-between;
       padding: 0 11px;
       &__like {
+        display: none;
         width: 20px;
         height: 18px;
         background-image: url(/assets/images/icons/not_liked.png);
